# heroic-discord

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: API_REFERENCE.md
.github/workflows/: bump-version-by-labels.yml  pypi.yml  release.yml  test.yml
_type_tests/: errors.py
examples/: basic_client.py  user_installable_app.py
src/heroic_discord/: __init__.py  client.py  constants.py  errors.py  log.py  settings.py
src/heroic_discord/events/: README.md  __init__.py  base.py
src/heroic_discord/events/gateway/: __init__.py  receive_events.py  send_events.py
src/heroic_discord/events/webhook/: __init__.py  events.py
src/heroic_discord/installable_apps/: README.md  __init__.py  builder.py  commands.py  enums.py  interactions.py  utils.py
src/heroic_discord/resources/: __init__.py  application.py  audit_log.py  auto_moderation.py  channel.py  emoji.py  entitlement.py  guild.py  guild_scheduled_event.py  guild_template.py  invite.py  lobby.py  message.py  poll.py  sku.py  soundboard.py  stage_instance.py  sticker.py  subscription.py  user.py  voice.py  webhook.py
src/heroic_discord/typing/: snowflake.py  token.py
tests/: smoke_test.py  test_client.py  test_installable_apps.py  test_snowflake.py
