[project]
name = "heroic-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
