[project]
name = "heroic-discord"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "confkit>=1.1.0",
    "herogold>=1.1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "pdoc>=16.0.0",
]
dev = [
    "pytest>=9.0.2",
]
